# Mindshare-Staking-Pool

./: Anchor.toml  BUILD_ISSUE_ANALYSIS.md  BUILD_STATUS.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_SUCCESS.md  EXACT_BUILD_ERRORS.md  FINAL_STATUS.md  FRONTEND_INTEGRATION.md  HOW_TO_USE.md  SETUP_COMPLETE.md
app/: admin-flow.ts  init-pool.ts  package-lock.json  package.json
app/app/: layout.tsx  page.tsx
app/components/: AppWalletProvider.tsx
app/hooks/: useStaking.ts
app/utils/: constants.ts  idl.json  mindshare_staking_pool.ts
frontend/: DAPP_READY.md  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/idl/: mindshare_staking_pool.json
frontend/lib/: program.ts  test-interaction.ts
mindshare-staking-pool/: Anchor.toml  DEPLOY.md  README.md  cli.ts  interact.ts  package-lock.json  package.json  simple-test.ts  test-contract.ts
mindshare-staking-pool/programs/mindshare-staking-pool/: Cargo.toml
mindshare-staking-pool/programs/mindshare-staking-pool/src/: lib.rs
mindshare-staking-pool/scripts/: init-devnet.ts  init.js  init.ts
mindshare-staking-pool/tests/: compile-test.ts  integration-test.ts  mindshare-staking-pool.ts  simple-test.ts
programs/mindshare-staking-pool/: Cargo.toml
programs/mindshare-staking-pool/src/: lib.rs
